test-expected/large/jobexecution/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: jobexecution
    foo.com/duversion: 2.8.1-20190919.1568927890158
    foo.com/version: 2.8.1
  labels:
    app.kubernetes.io/name: jobexecution
    helm.sh/chart: jobexecution-2.8.1
  name: jobexecution
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jobexecution
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jobexecution
        app.kubernetes.io/name: jobexecution
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-jobexecution:2.8.1-20190919.1568927890158
        imagePullPolicy: IfNotPresent
        name: jobexecution
        ports:
        - containerPort: 8080
          name: jobexecution
          protocol: TCP
        - containerPort: 8080
          name: jobdefinitions
          protocol: TCP
        resources: {}
