test-expected/large/jobexecution/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: jobexecution
    foo.com/duversion: 2.8.1-20190919.1568927890158
    foo.com/version: 2.8.1
  labels:
    app.kubernetes.io/name: jobexecution
    helm.sh/chart: jobexecution-2.8.1
  name: jobexecution
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /jobExecution
    - uri:
        prefix: /jobExecution/
    route:
    - destination:
        host: jobexecution.peekay.svc.cluster.local
